(library
  (name ocamlc_kit)
  (public_name ocamlc_kit)
  (libraries
    utils
    compiler_lambda
    cmx_format
    identifiers
    compiler_parsing
    compiler_clambda
    middle_end_shared
    typing_types
    middle_end_flambda_base_types
    compiler_env
    cmxs_format
    middle_end_flambda
    middle_end_closure
    middle_end_identifiers
    linear_format
    asmcomp_lang
    asmcomp_platform
    asmcomp_platform_shared
    typing
    arch_amd64
    )
  )
