(library
  (name ocamlc_kit)
  (public_name ocamlc_kit)
  (libraries
    arch_amd64
    asmcomp
    asmcomp_lang
    asmcomp_platform
    asmcomp_platform_shared
    cmx_format
    cmxs_format
    compiler_clambda
    compiler_env
    compiler_lambda
    compiler_parsing
    compiler_typedtree
    identifiers
    linear_format
    middle_end_closure
    middle_end_flambda
    middle_end_flambda_base_types
    middle_end_identifiers
    middle_end_shared
    typing
    typing_types
    utils
    )
  )
