;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
  (name asmcomp)
  (libraries
    utils
    compiler_lambda
    cmx_format
    identifiers
    compiler_parsing
    compiler_clambda
    middle_end_shared
    typing_types
    middle_end_flambda_base_types
    compiler_env
    cmxs_format
    middle_end_flambda
    middle_end_closure
    middle_end_identifiers
    linear_format
    asmcomp_lang
    asmcomp_platform
    typing
    arch_amd64
    asmcomp_platform_shared)
  (flags
    :standard
    -open Middle_end_shared
    -open Middle_end_flambda_base_types
    -open Middle_end_flambda
    -open Middle_end_closure
    -open Middle_end_identifiers
    -open Asmcomp_platform_shared
    -w -9
    ))
