;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
   (name compiler_lambda)
   (public_name ocamlc_kit.internal.compiler_lambda)
   (wrapped false)
   (libraries
     utils
     compiler_parsing
     typing_types
     cmi_format
     compiler_env
     typing
     compiler_typedtree
     identifiers
     tag_values
     sexplib
     )
   (flags :standard -w -9 -open Sexplib.Std)
   (preprocess (pps ppx_sexp_conv))
   )

(rule
  (target runtimedef.ml)
  (deps    (:gen generate_runtimedef.sh)
           (:fail (file ../runtime/caml/fail.h))
           (:prim (file ../runtime/primitives)))
  (action  (with-stdout-to %{target}
                           (run %{gen} %{fail} %{prim}))))
